# yasm

./: CMakeLists.txt
cmake/modules/: YasmMacros.cmake
modules/preprocs/nasm/: CMakeLists.txt
